
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct winsize {int ws_row; int ws_col; scalar_t__ ws_ypixel; scalar_t__ ws_xpixel; } ;
typedef scalar_t__ pid_t ;


 int SIGINT ;
 int _exit (int) ;
 int execve (char*,char**,char**) ;
 scalar_t__ forkpty (int*,int *,int *,struct winsize*) ;
 int kill (scalar_t__,int ) ;
 int process_cmds () ;
 int resync (int) ;
 int usleep (int) ;

int main(int argc, char *argv[], char *environ[])
{
 pid_t pid;
 int masterfd;
 struct winsize terminal_size;
 int i;
 terminal_size.ws_row = 80;
 terminal_size.ws_col = 25;
 terminal_size.ws_xpixel = 0;
 terminal_size.ws_ypixel = 0;

 pid = forkpty(&masterfd, ((void*)0), ((void*)0), &terminal_size);
 if (pid == 0) {
  char *args[] = { "/bin/sh", ((void*)0) };
  char *env[] = { ((void*)0) };




  process_cmds();

  _exit(1);
 }
 resync(masterfd);

 for (i = 0; i < 10; i++) {
  usleep(100);
  kill(pid, SIGINT);
 }




 resync(masterfd);
 return 0;
}
